--- a/style.css
+++ b/style.css
@@ -98,13 +98,13 @@ ul{
     width: 100%;
     margin-top: 0%;
     padding: 0;
-	background: linear-gradient(deepskyblue, dodgerblue);
-	background: -webkit-linear-gradient(deepskyblue, dodgerblue);
-    background:    -moz-linear-gradient(deepskyblue, dodgerblue);
-    background:     -ms-linear-gradient(deepskyblue, dodgerblue);
-    background:      -o-linear-gradient(deepskyblue, dodgerblue);
-    background:         linear-gradient(deepskyblue, dodgerblue);
-	background: dodgerblue;
+	background: linear-gradient(deepskyblue, white);
+	background: -webkit-linear-gradient(deepskyblue, white);
+    background:    -moz-linear-gradient(deepskyblue, white);
+    background:     -ms-linear-gradient(deepskyblue, white);
+    background:      -o-linear-gradient(deepskyblue, white);
+    background:         linear-gradient(deepskyblue, white);
+	background: white;
 	border-radius: 3px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .3),
                 0 3px 5px rgba(0, 0, 0, .2),
@@ -123,11 +123,11 @@ ul li a{
     padding: 8px 8px 17px 8px;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, .4);
 	box-shadow: 0 1px 0 rgba(255, 255, 255, .7) inset, 
-                0 -1px 0 hsl(210, 100%, 32%) inset, 
-                0 -2px 0 hsl(210, 100%, 38%) inset, 
-                0 -3px 0 hsl(210, 100%, 44%) inset, 
-                0 -4px 0 hsl(210, 100%, 50%) inset, 
-                0 -5px 0 hsl(210, 100%, 60%) inset;
+                0 -1px 0 hsl(60, 100%, 32%) inset, 
+                0 -2px 0 hsl(60, 100%, 38%) inset, 
+                0 -3px 0 hsl(60, 100%, 44%) inset, 
+                0 -4px 0 hsl(60, 100%, 50%) inset, 
+                0 -5px 0 hsl(60, 100%, 60%) inset;
 	transition: padding .3s;
 	position: relative;
 	
@@ -172,7 +172,7 @@ ul li a::before{
 
 ul li a:hover::before,
 ul li a:focus::before{
-    background: white;
-    box-shadow: 0 0 2px white, 
+    background: red;
+    box-shadow: 0 0 2px red, 
                 0 -1px 0 rgba(0, 0, 0, .4);
 }
