--- a/style.css
+++ b/style.css
@@ -98,12 +98,12 @@ ul{
     width: 100%;
     margin-top: 0%;
     padding: 0;
-	background: linear-gradient(deepskyblue, white);
-	background: -webkit-linear-gradient(deepskyblue, white);
-    background:    -moz-linear-gradient(deepskyblue, white);
-    background:     -ms-linear-gradient(deepskyblue, white);
-    background:      -o-linear-gradient(deepskyblue, white);
-    background:         linear-gradient(deepskyblue, white);
+	background: linear-gradient(red, white);
+	background: -webkit-linear-gradient(red, white);
+    background:    -moz-linear-gradient(red, white);
+    background:     -ms-linear-gradient(red, white);
+    background:      -o-linear-gradient(red, white);
+    background:         linear-gradient(red, white);
 	background: white;
 	border-radius: 3px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .3),
@@ -123,11 +123,11 @@ ul li a{
     padding: 8px 8px 17px 8px;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, .4);
 	box-shadow: 0 1px 0 rgba(255, 255, 255, .7) inset, 
-                0 -1px 0 hsl(60, 100%, 32%) inset, 
-                0 -2px 0 hsl(60, 100%, 38%) inset, 
-                0 -3px 0 hsl(60, 100%, 44%) inset, 
-                0 -4px 0 hsl(60, 100%, 50%) inset, 
-                0 -5px 0 hsl(60, 100%, 60%) inset;
+                0 -1px 0 hsl(360, 100%, 32%) inset, 
+                0 -2px 0 hsl(360, 100%, 38%) inset, 
+                0 -3px 0 hsl(360, 100%, 44%) inset, 
+                0 -4px 0 hsl(360, 100%, 50%) inset, 
+                0 -5px 0 hsl(360, 100%, 60%) inset;
 	transition: padding .3s;
 	position: relative;
 	
@@ -144,14 +144,22 @@ ul li a:hover,
 ul li a:focus{
     background: rgba(255,255,255,.2);
     box-shadow: 0 1px 0 rgba(255, 255, 255, .7) inset, 
-                0 -1px 0 hsl(210, 100%, 42%) inset, 
-                0 -2px 0 hsl(210, 100%, 48%) inset, 
-                0 -3px 0 hsl(210, 100%, 54%) inset, 
-                0 -4px 0 hsl(210, 100%, 60%) inset, 
-                0 -5px 0 hsl(210, 100%, 70%) inset; 
+                0 -1px 0 hsl(0, 100%, 0%) inset, 
+                0 -2px 0 hsl(0, 100%, 0%) inset, 
+                0 -3px 0 hsl(0, 100%, 0%) inset, 
+                0 -4px 0 hsl(0, 100%, 0%) inset, 
+                0 -5px 0 hsl(0, 100%, 0%) inset; 
 	padding: 8px 25px 17px 25px;
 	font-weight: bold;
 } 
+
+prom {
+	transition-delay: color red 1s;
+
+}
+#prom:hover {
+	color:red;
+}
 
 ul li a:active{
     background: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.1)); 
@@ -175,4 +183,18 @@ ul li a:focus::before{
     background: red;
     box-shadow: 0 0 2px red, 
                 0 -1px 0 rgba(0, 0, 0, .4);
+}
+
+#pr1 {
+	background: black;
+	width: 80%;
+	border: 5px groove red;
+	border-radius:0%;
+	margin: auto;
+
+}
+
+#test {
+	width:20%;
+	height:20%;
 }
