--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ td {
 	font-family: Verdana;
 	max-width: 50%;
 	margin: auto;
-	overflow: auto;
+	overflow: hidden;
 	height: 38em;
 }
 
@@ -220,8 +220,12 @@ td {
 	font-family: Verdana;
 	max-width: 50%;
 	margin: auto;
-	overflow: auto;
 	height: 29.8em;
+}
+#test2{
+  max-height: 15%;
+  overflow-y: scroll;
+  float: left;
 }
 
 form#paiement {
